lintian (2.5.50) UNRELEASED; urgency=medium

  XXX: generate tag summary with private/generate-tag-summary

  * checks/binaries.{desc,pm}:
    + [NT] Handle RUNPATH like we handle RPATH.  (Closes: #844903)
    + [NT] Update hardening-no-pie description to reflect that
      PIE is on by default in Debian.
  * checks/cruft.desc:
    + [BR] Detect utf convert non free code.
      (Closes: #843595)
  * checks/debhelper.pm:
    + [BR] Apply patch from Yann Soubeyrand :
      "Allow debhelper "--with" addons to be quoted".
      (Closes: #839822)
  * checks/files.desc:
    + [NT] Document that we no longer accept "virtual packages"
      for deliberately empty packages.  If your package receives
      an "empty-binary-package" tag, please replace the use of
      "virtual package".
  * checks/scripts.{desc,pm}:
    + [JW, NT] Apply patch from Antonio Ospite that updates the
      test for php scripts without a php-cli dependency.  Thanks
      to Ondřej Surý for the report and Mathieu Parent for the
      initial patch.  (Closes: #818962)

  * collection/objdump-info.desc:
    + [NT] Bump version due to RUNPATH collection.

  * data/binaries/embedded-libs:
    + [BR] Allow openssl1.0 as source package.  (Closes: #843406).
  * data/files/privacy-breaker-websites:
    + [BR] Detect more logos.
  * data/scripts/interpreters:
    + [NT] Apply patch from Antonio Ospite to correct a false
      positive warning for python scripts using python2 in the
      shebang line.  Thanks to Per Andersson for the report and
      Luca Boccassi for the initial patch for solving this.
      (Closes: #743599)
  * data/spelling/corrections:
    + [PW] Add more corrections.

  * helpers/coll/objdump-info-helper:
    + [NT] Extract RUNPATH from binaries as well.

  * lib/Lintian/Collect/Binary.pm:
    + [NT] Expose RUNPATH when set in the binary.
    + [NT] Remove "virtual package" from the list of phrases
      marking a package as a meta-package.  Thanks to Stuart