@@ -1,11 +1,0 @@
-Package: deb-format-control-xz
-Version: 1.0
-Architecture: all
-Maintainer: Debian Lintian Maintainers <lintian-maint@debian.org>
-Section: devel
-Priority: extra
-Description: Test package with control.tar.xz
- This is a test package designed to exercise some feature or tag of
- Lintian.  It is part of the Lintian test suite and may do very odd
- things.  It should not be installed like a regular package.  It may
- be an empty package.
